apps/gitea/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-httproute
  namespace: gitea
spec:
  hostnames:
    - gitea.lab.mpopov.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gitea-http
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
